refactor(optimizer-analyzer): consume model/ types and ModelDbMapper
Adapt the analyzer to the entity→db rename and the removal of
factory methods on model/ data types. The analyzer's strategy
interface and policy now work in pure model/ types
(TableOperationsHistory instead of TableOperationsHistoryRow);
AnalyzerRunner uses ModelDbMapper to bridge db rows to those types.

- OperationAnalyzer.shouldSchedule: parameter type changes from
  db.TableOperationsHistoryRow to model.TableOperationsHistory.
- CadencePolicy: same parameter change; remove String→HistoryStatus
  parsing — the model carries it as a typed enum.
- CadenceBasedOrphanFilesDeletionAnalyzer: signature update.
- AnalyzerRunner: inject ModelDbMapper. Imports switch from
  entity/ to db/. Repository find / findLatestPerTable now take
  db.OperationType (translated via dbMapper.toDbOperationType).
  Row → model translation uses dbMapper.toTable / .toOperation /
  .toHistory. Persisting a new PENDING operation goes through
  dbMapper.toRow(op) instead of the removed TableOperation.toRow().
- Tests rewritten with the new types and pass a real ModelDbMapper
  into the runner-under-test.